--- a/pagila-implementations/pagila-sqlmodel-basic/pyproject.toml
+++ b/pagila-implementations/pagila-sqlmodel-basic/pyproject.toml
@@ -11,9 +11,13 @@ dependencies = [
     # Business-specific dependencies
     "sqlmodel>=0.0.25",
     "psycopg2-binary>=2.9.9",
+
+    # Data processing dependencies (for transformation containers)
+    "pandas>=2.0.0",
 ]
 
 [project.optional-dependencies]
+
 dev = [
     "pytest>=7.4.3",
     "pytest-cov>=4.1.0",
